--- a/index.html
+++ b/index.html
@@ -15,9 +15,6 @@
 <script src="dat.gui.min.js"></script>
 <script src="gui.js"></script>
 
-
-
-
 <script type="x-shader/x-vertex" id="vertexShader">
             void main(){
                 vec4 modelViewPosition = modelVertexMatrix = vec4(position,1.0);
@@ -33,9 +30,7 @@
     var scene = new THREE.Scene();
     var camera = new THREE.PerspectiveCamera(75,window.innerWidth/window.innerHeight,0.1,1000);
     camera.position.set(0,2,3);
-    //var cameraOrtho = new THREE.OrthographicCamera(-100*window.innerWidth/window.innerHeight,100*window.innerWidth/window.innerHeight,100,-100,1,1000);
-    //cameraOrtho.position.set(0,2,3);
-    //scene.add(cameraOrtho);
+
 
     var renderer = new THREE.WebGLRenderer();
     renderer.setSize(window.innerWidth,window.innerHeight);
@@ -73,12 +68,12 @@
 
     var listener = new THREE.AudioListener();
     camera.add(listener);
-    var sound1 = new THREE.Audio( listener );
-    sound1.load( 'sound.mp3' );
-    sound1.setVolume(0.2);
-    sound1.loop = true;
-    sound1.autoplay = true;
-    mesh1.add( sound1 );;
+    var sceneSound = new THREE.Audio( listener );
+    sceneSound.load( 'sound.mp3' );
+    sceneSound.setVolume(0.2);
+    sceneSound.loop = true;
+    sceneSound.autoplay = true;
+    mesh1.add( sceneSound );;
     displayGui();
 
 
