--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <title>SICENCOMENDAS</title>
+    <title>SGRAI - 2NB</title>
     <style>
         body {margin: 0;}
         canvas {width: 100%; height:100%;};
