--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <audio id= "stefanie" src = "sound.mp3"></audio>
-<script src="js/three.js"></script>
+<script src="js/Three.js"></script>
 <script src="OrbitControls.js"></script>
 <script src="modelo.js"></script>
 <script src="item.js"></script>
@@ -28,6 +28,11 @@
             }
         </script>
 <script>
+    const PORT = process.env.PORT || 3000;
+    app.listen(PORT, () => {
+        console.log(`Our app is running on port ${ PORT }`);
+    });
+
     var scene = new THREE.Scene();
     var camera = new THREE.PerspectiveCamera(75,window.innerWidth/window.innerHeight,0.1,1000);
     camera.position.set(0,2,3);
