--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 <script src="dat.gui.min.js"></script>
 <script src="gui.js"></script>
 <script src="index.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r79/three.min.js"></script>
 
 <script type="x-shader/x-vertex" id="vertexShader">
             void main(){
